# we0-index

./: .env.example  Dockerfile  README-zh.md  README.md  main.py  pyproject.toml
clients/: __init__.py
clients/jina/: __init__.py  client.py  embeddings.py
config/: __init__.py  loguru.py
constants/: constants.py
domain/emuns/: chroma_mode.py  model_provider.py  qdrant_mode.py  vector_type.py
domain/entity/: blob.py  code_segment.py  document.py  task_context.py
domain/model/: __init__.py  base.py  repository.py
domain/request/: __init__.py  add_index_request.py  all_index_request.py  delete_index_request.py  drop_index_request.py  git_index_request.py  retrieval_request.py
domain/response/: add_index_by_file_response.py  add_index_response.py  retrieval_segment_response.py
domain/result/: result.py
exception/: __init__.py  exception.py
extensions/: ext_manager.py
extensions/vector/: __init__.py  base_vector.py  chroma.py  ext_vector.py  pgvector.py  qdrant.py
launch/: launch.py  we0_index_mcp.py
loader/: __init__.py  repo_loader.py
loader/segmenter/: __init__.py  base_line_segmenter.py  base_segmenter.py  tree_sitter_factory.py  tree_sitter_segmenter.py
loader/segmenter/language/: __init__.py  css.py  go.py  java.py  javascript.py  python.py  typescript.py  typescriptxml.py
models/: __init__.py  model_factory.py
prompt/: prompt.py
resource/: dev.yaml
router/: __init__.py  git_router.py  vector_router.py
setting/: __init__.py  setting.py
utils/: __init__.py  git_parse.py  helper.py  mimetype_util.py  path_util.py  vector_helper.py
